replace Collectors.toList with toList of stream